added style to the item 1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
     <head>
         <title>Absa Kudos</title>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
+        <!-- Option 1: Include in HTML -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     </head>
 
@@ -14,14 +18,72 @@
 
         <div class="grid-container">
             <div class="item1">
-                <ul class="list">     
+                <!-- <ul class="list">     
                     <li class="listHeader" >Recent Nominations</li ><hr> 
                     <li class="ourList">Item 2</li><hr>  
                     <li class="ourList">Item 3</li><hr>      
                     <li class="ourList">Item 4</li><hr>       
                     <li class="ourList">Item 5</li><hr>       
                     <li class="ourList">Item 6</li><hr>      
-                </ul>
+                </ul> --> 
+                <div>
+                    <h6 class="text-center">Recent Nominations</h6>
+                </div>
+                <div class="col-md-12 nomination-border"></div>
+                <div class="row nomination">
+                    <div class="col-md-2 p-3">
+                        <div class="in-circle ml-5 mt-4">JS</div>
+                    </div>
+                    <div class="col-md-10">
+                       <div class="row">
+                        <div class="col-md-10">
+                            <h6>John Smith</h6>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="likes">100</div>
+                            <i class="bi bi-heart"sytle="color:red"></i>
+                        </div>
+                       </div>
+                        <div class="">
+                            <label style="margin-bottom:0px; display:inline-block"><b>Developer</b></label><label class="red">- Engineering</label>
+                        </div>
+                        <div class="">
+                            <p>Brave - We are afraid to challenge our thinking.</p>
+                        </div>
+                        <div class="">
+                            <label class="red float-right">10d ago</label>
+                        </div>
+                    </div>
+                    
+<div class="col-md-12 nomination-border"></div>
+                </div>
+                <div class="row nomination">
+                    <div class="col-md-2 p-3">
+                        <div class="in-circle ml-5 mt-4">JS</div>
+                    </div>
+                    <div class="col-md-10">
+                       <div class="row">
+                        <div class="col-md-10">
+                            <h6>John Smith</h6>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="likes">100</div>
+                            <i class="bi bi-heart"sytle="color:red"></i>
+                        </div>
+                       </div>
+                        <div class="">
+                            <label style="margin-bottom:0px; display:inline-block"><b>Developer</b></label><label class="red">- Engineering</label>
+                        </div>
+                        <div class="">
+                            <p>Brave - We are afraid to challenge our thinking.</p>
+                        </div>
+                        <div class="">
+                            <label class="red float-right">10d ago</label>
+                        </div>
+                    </div>
+                    
+<div class="col-md-12 nomination-border"></div>
+                </div>
             </div>
             <div class="item2">2</div>
             <div class="item3">3</div>  
