--- a/index.html
+++ b/index.html
@@ -18,14 +18,6 @@
 
         <div class="grid-container">
             <div class="item1">
-                <!-- <ul class="list">     
-                    <li class="listHeader" >Recent Nominations</li ><hr> 
-                    <li class="ourList">Item 2</li><hr>  
-                    <li class="ourList">Item 3</li><hr>      
-                    <li class="ourList">Item 4</li><hr>       
-                    <li class="ourList">Item 5</li><hr>       
-                    <li class="ourList">Item 6</li><hr>      
-                </ul> --> 
                 <div>
                     <h6 class="text-center">Recent Nominations</h6>
                 </div>
@@ -87,7 +79,34 @@
             </div>
             <div class="item2">2</div>
             <div class="item3">3</div>  
-            <div class="item4">4</div>
+            <div class="item4">
+
+                <div>
+                    <h6 class="newsHeader">Latest News</h6>
+                    <div class="col-md-12 news-border"></div>
+                </div>
+
+            <div class="scrollable-content">
+
+            <div class="card newscard">
+                <img src="./assets/images/landing.png" class="card-img" alt="News Image 1">
+                <div class="card-body">
+                    <h5 class="card-title">News Title 1</h5>
+                    <p class="card-text">News description</p>
+                </div>
+            </div>
+
+            <div class="card newscard">
+                <img src="./assets/images/news2.jpg" class="card-img" alt="News Image 2">
+                <div class="card-body">
+                    <h5 class="card-title">News Title 1</h5>
+                    <p class="card-text">News description</p>
+                </div>
+            </div>
+
+        </div>
+
+            </div>
         </div>
     </body> 
 
