Picture and text

--- a/index.html
+++ b/index.html
@@ -86,25 +86,29 @@
                     <div class="col-md-12 news-border"></div>
                 </div>
 
-            <div class="scrollable-content">
+                <div class="news-wrapper">
+                <div class="news-container">
+                    <div class="news-item">
+                        <img src="./assets/images/landing.png" class="news-img" alt="News Image">
+                        <!-- <div class="date-overlay">October 1 2023</div> -->
+                        <div class="news-content">
+                            <h5 class="news-title">Second quota trailblazers for 2023 anouncement</h5>
+                            <p class="news-description">Time vampire gain traction. C-suite marginalised key performance indicators wiggle room innovation is hot right now can we jump on a zoom, and granularity. We need his overall to be busier and active we need to socialize the comms with the wider stakeholder community.</p>
+                        </div>
+                    </div>
 
-            <div class="card newscard">
-                <img src="./assets/images/landing.png" class="card-img" alt="News Image 1">
-                <div class="card-body">
-                    <h5 class="card-title">News Title 1</h5>
-                    <p class="card-text">News description</p>
+                    <!-- <div class="news-item"> -->
+                        <!-- <img src="./assets/images/landing.png" class="news-img" alt="News Image"> -->
+                        <!-- <div class="date-overlay">October 1 2023</div> -->
+                        <!-- <div class="news-content">
+                            <h5 class="news-title">Second quota trailblazers for 2023 anouncement</h5>
+                            <p class="news-description">Time vampire gain traction. C-suite marginalised key performance indicators wiggle room innovation is hot right now can we jump on a zoom, and granularity. We need his overall to be busier and active we need to socialize the comms with the wider stakeholder community.</p>
+                        </div>
+                    </div> -->
+
                 </div>
-            </div>
 
-            <div class="card newscard">
-                <img src="./assets/images/news2.jpg" class="card-img" alt="News Image 2">
-                <div class="card-body">
-                    <h5 class="card-title">News Title 1</h5>
-                    <p class="card-text">News description</p>
-                </div>
             </div>
-
-        </div>
 
             </div>
         </div>
