--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
                 <div class="news-wrapper">
                 <div class="news-container">
                     <div class="news-item">
+                        <div class="image-wrapper">
                         <img src="./assets/images/landing.png" class="news-img" alt="News Image">
-                        <!-- <div class="date-overlay">October 1 2023</div> -->
+                        <div class="date-overlay">October 1, 2023</div>
+                        </div>
                         <div class="news-content">
                             <h5 class="news-title">Second quota trailblazers for 2023 anouncement</h5>
                             <p class="news-description">Time vampire gain traction. C-suite marginalised key performance indicators wiggle room innovation is hot right now can we jump on a zoom, and granularity. We need his overall to be busier and active we need to socialize the comms with the wider stakeholder community.</p>
@@ -98,8 +100,10 @@
                     </div>
 
                     <div class="news-item">
+                        <div class="image-wrapper">
                         <img src="./assets/images/news2.jpg" class="news-img" alt="News Image">
-                        <!-- <div class="date-overlay">October 1 2023</div> -->
+                        <div class="date-overlay">October 1, 2023</div>
+                        </div>
                         <div class="news-content">
                             <h5 class="news-title">End of the quota, please remember to recognize your colleagues.</h5>
                             <p class="news-description">Time vampire gain traction. C-suite marginalised key performance indicators wiggle room innovation is hot right now can we jump on a zoom, and granularity. We need his overall to be busier and active we need to socialize the comms with the wider stakeholder community.</p>
