--- a/index.html
+++ b/index.html
@@ -80,12 +80,8 @@
             <div class="item2">2</div>
             <div class="item3">3</div>  
             <div class="item4">
-
-                <div>
-                    <h6 class="newsHeader">Latest News</h6>
+                <h6 class="newsHeader">Latest News</h6>
                     <div class="col-md-12 news-border"></div>
-                </div>
-
                 <div class="news-wrapper">
                 <div class="news-container">
                     <div class="news-item">
@@ -109,6 +105,19 @@
                             <p class="news-description">Time vampire gain traction. C-suite marginalised key performance indicators wiggle room innovation is hot right now can we jump on a zoom, and granularity. We need his overall to be busier and active we need to socialize the comms with the wider stakeholder community.</p>
                         </div>
                     </div>
+
+
+                    <div class="news-item">
+                        <div class="image-wrapper">
+                        <img src="./assets/images/news2.jpg" class="news-img" alt="News Image">
+                        <div class="date-overlay">October 1, 2023</div>
+                        </div>
+                        <div class="news-content">
+                            <h5 class="news-title">End of the quota, please remember to recognize your colleagues.</h5>
+                            <p class="news-description">Time vampire gain traction. C-suite marginalised key performance indicators wiggle room innovation is hot right now can we jump on a zoom, and granularity. We need his overall to be busier and active we need to socialize the comms with the wider stakeholder community.</p>
+                        </div>
+                    </div>
+
 
                 </div>
 
