--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,21 @@
             Dashboard
         </nav>
 
+        <div class="row">
+            <div class="col-md-2 one"></div>
+            <div class="col-md-2 two"></div>
+            <div class="col-md-2 three"></div>
+            <div class="col-md-2 four"></div>
+            <div class="col-md-2 five"></div>
+            <div class="col-md-2 six"></div>
+        </div>
+
+
+
+
+
+
+
         <div class="grid-container">
             <div class="item1">
                 <!-- <ul class="list">     
@@ -165,7 +180,7 @@
                         padding-left: 1rem; padding-right: 1rem;
                         color: aliceblue; margin-left: 2rem;
                         margin-right: 2rem; border-radius: 1rem;
-                        background-color: black; font-size: 12px;">
+                        background-color: black; vscode-file://vscode-app/c:/Users/AB032N4/AppData/Local/Programs/Microsoft%20VS%20Code/resources/app/out/vs/code/electron-sandbox/workbench/workbench.htmlfont-size: 12px;">
                         Peer to peer recognition <i class="bi bi-arrow-right" style="margin-left: 6px;"></i>
                     </div>
                     <hr style="background-color: white; margin-left: 1rem; margin-right: 1rem; ">
@@ -192,7 +207,7 @@
                </div>
             </div>
             </div>
-            <div class="item3">
+            <div class="item3" style="background-color: white;">
             <div class="statsHead">Current quota statistics</div>
                 <div class="statsContainer">
  
