--- a/demo.html
+++ b/demo.html
@@ -21,47 +21,8 @@
 
   </head>
 
-  <body class="">
-
-    <div class="useless">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt at possimus facere repellendus doloremque ab optio ullam eligendi impedit, aliquam magnam expedita magni asperiores enim eius aspernatur hic autem id.
-        Veritatis repellat inventore omnis cum dolorem assumenda ipsa temporibus aut odio at similique magni ab praesentium amet possimus, nostrum obcaecati commodi mollitia qui eum eius beatae, cumque aperiam officia. Architecto.
-        Vero, repellat. Eius blanditiis beatae nemo debitis repellendus. Numquam mollitia debitis, reiciendis rerum, amet labore error nam, iusto eligendi obcaecati facere dolorum ab quisquam temporibus perspiciatis veritatis hic dolor tempora!
-        Quasi consequatur fuga pariatur molestiae ratione dignissimos repudiandae, earum eaque maiores. Sint expedita accusamus neque velit mollitia exercitationem non quidem dignissimos blanditiis? Sunt repellat ipsam nostrum dolorum deleniti consequatur molestiae?
-        Ullam veniam temporibus quod esse sapiente molestiae excepturi pariatur, sint explicabo, tenetur ut fugiat, repellat laboriosam officiis. Labore ducimus unde nulla. Recusandae repudiandae expedita consectetur? Quaerat dolore recusandae atque? Veritatis.
-        Ad nemo quas dolore libero? Aperiam, quia necessitatibus fugiat beatae expedita commodi id quibusdam ut molestias esse fugit obcaecati provident deserunt aliquam reprehenderit blanditiis praesentium repellat officia! Vel, repellat quaerat.
-        Laboriosam a vel sed iusto eveniet recusandae dicta alias veritatis sunt nam doloremque voluptatum eligendi reiciendis aut tempora quod optio, voluptatibus accusantium magni perspiciatis ducimus? Voluptates qui saepe earum fugit.
-        Quod, distinctio possimus. Accusantium, labore sit tempore quo delectus exercitationem recusandae ab quasi magni repellendus atque facere eum a aliquam non minima odio. Eius voluptatem laudantium incidunt inventore possimus quod!
-        Perferendis necessitatibus deleniti fugiat? Consequuntur quos magnam fuga suscipit maxime voluptas quaerat repellat unde, cumque rem corrupti. Culpa odio dolorum aliquam ipsa! Natus a consectetur neque earum quidem quasi nesciunt.
-        Quas atque veniam, ducimus assumenda incidunt esse voluptatem tempora dolor aspernatur blanditiis dolorum quo? Deserunt unde aut facilis at repellendus quidem maiores rerum, officia cumque nesciunt voluptatibus, temporibus in mollitia?
-    </div>
-    <div class="usefull">
-        <h1>Welcome</h1>
-    </div>
-    <div class="useless">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi similique eum vitae fugiat ad ut aspernatur commodi, consequuntur reprehenderit molestiae, repudiandae blanditiis est possimus molestias iure itaque assumenda sapiente omnis.
-        Nulla vero amet facilis dolorum laudantium enim ex ducimus odio, quia iste expedita hic totam quisquam! Error numquam laborum aliquid odit minima aliquam praesentium doloremque illo est explicabo, porro eum!
-        Cum repudiandae officiis magni obcaecati omnis, totam, odit perferendis maxime veritatis eveniet fuga? Quos id modi consequatur nam alias deserunt molestiae minima incidunt libero, dolor laudantium, officia, quaerat labore repudiandae!
-        Provident, hic odio. Explicabo quod amet sint harum, sed architecto laborum adipisci voluptates odit velit dicta debitis possimus vel quidem ipsam quaerat exercitationem quam delectus id enim illum culpa? Earum.
-        Provident, tempora neque. Nobis fugiat eveniet veritatis suscipit totam consequatur, tempore ut alias tenetur omnis assumenda laboriosam iste, et provident veniam quae quasi! Ipsum tenetur maiores deserunt, officiis nulla illo.
-    </div>
-    <div class="usefull bg2">
-        to Absa
-    </div>
-    <div class="useless">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora rerum reiciendis, soluta facere atque quos fugiat? Facilis incidunt repellendus sunt quos, iste officiis fuga quis odio repudiandae tempora a veniam?
-        Dicta labore ab nesciunt suscipit facilis id consequatur, atque obcaecati consectetur! Provident repudiandae, ad eligendi quam fuga eos ipsa molestiae ullam est a cupiditate iure natus nemo, minima quibusdam fugiat.
-        Inventore ducimus explicabo corrupti eius quae deserunt itaque? Fuga dicta vel debitis! Sunt in consequatur suscipit quo voluptates eligendi aperiam repudiandae accusantium, nulla asperiores minima non perspiciatis, incidunt illo qui.
-        Ipsa porro sed ad doloremque non minus saepe odio fugiat, eum delectus quam modi explicabo obcaecati quo laboriosam dolorem distinctio facilis eaque sint magni nobis libero. Excepturi quis alias quibusdam.
-        Consequuntur, dignissimos provident corrupti distinctio placeat ipsam aspernatur ut incidunt laborum in culpa atque ducimus ullam quisquam a! Debitis explicabo similique obcaecati numquam cupiditate eaque recusandae, laudantium harum aliquam incidunt.
-        Ratione nemo consequuntur culpa voluptatibus ipsam quae! Obcaecati cum accusantium natus quis dignissimos debitis reiciendis quasi amet, quas, expedita sed modi illum repellendus reprehenderit perspiciatis. Qui numquam inventore porro similique?
-        Sint, cupiditate? Consequuntur eligendi architecto dolorem maiores corrupti sint laborum totam error eaque officia, mollitia obcaecati ut id? Facilis, maiores. Dolorum quisquam eaque tempora rerum labore. Hic sit quo fuga.
-    </div>
-    <div class="usefull">
-        to Absa
-    </div>
-<!--
-
+  <body class="container">
+    
     <div class="row">
       <div class="col-md-4 box">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente ex,
@@ -147,6 +108,5 @@
         </div>
       </div>
     </div>
--->
   </body>
 </html>
