--- a/index.html
+++ b/index.html
@@ -77,21 +77,23 @@
                   </div>
                   <hr>
                   <div class="stats1">
-                    Hello
+                    <div class="row One">50</div>
+                    <div class="row">Nomination made points </div>
                   </div>
                   <hr>
                   <div class="stats3">
-                    Hello
+                    <!-- <div class="row One">1200</div>
+                    <div class="row">Nomination recieved points </div> -->
                   </div>
                   <hr>
                   <div class="stats4">
                     Hello
                   </div>
                   <hr>
-                  <div class="stats4">
+                  <!-- <div class="stats4">
                     Hello
                   </div>
-                  <hr>
+                  <hr> -->
             </div>
               
                 <!-- <div class="stats">
