padding added on the duration

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                        <label class="duration pb-1"><b>10d ago</b></label>
+                        <label class="duration pb-1 px-3"><b>10d ago</b></label>
                     </div>
                    </div>
                 <div class="col-sm-12 nomination-border"></div>
@@ -84,7 +84,7 @@
                 </div>
                <div class="row">
                 <div class="col-sm-12">
-                    <label class="duration pb-1"><b>10d ago</b></label>
+                    <label class="duration pb-1 px-3"><b>10d ago</b></label>
                 </div>
                </div>
                 <div class="col-sm-12 nomination-border"></div>
