Added news code

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                     <hr class="hr">
                     <a class="absa-btn btn-white" href="#">Cerrtifications recognition <i class="bi bi-arrow-right" style="margin-left: 6px;"></i></a>
                 </div>        
-            
             </div>
           </div>
           <div class="col-sm-6 p-2">
@@ -102,22 +101,43 @@
           </div>
         </div>
         <div class="row p-2">
-
-          <div class="col-md-12 box ">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ab
-          excepturi dolor sapiente neque veritatis deserunt. Labore, atque dolor
-          soluta autem, doloribus velit rerum omnis quae quis, eaque blanditiis!
-          Sequi. Reprehenderit alias amet fuga facilis ab possimus excepturi
-          laboriosam commodi, nemo libero voluptatem. Ducimus dolor aspernatur
-          et provident, nesciunt enim veniam explicabo, odio debitis sit
-          dignissimos quisquam, fugit error? Officiis! Incidunt tempora, neque
-          labore maxime aliquid quo iure repellat veniam aperiam velit ullam,
-          ipsa tenetur est eaque reiciendis similique libero, magni
-          reprehenderit rem molestias iusto perferendis! Nam ex perspiciatis
-          beatae. Dolorum dolor commodi ullam. Itaque earum sunt assumenda
-          repellat dolore necessitatibus ipsa modi libero quas facere mollitia,
-          eum, debitis quod eos expedita magni adipisci unde perspiciatis id
-          atque iure harum.
+          <div class="col-md-12 box4">
+            <h2 class="news-head">Latest News</h2>
+            <div class="row news-container">
+              <hr class="custom-hr">
+                <div class="col-md-6 card-news">
+                  <div class="news-wrapper">
+                    <div class="news-container">
+                      <div class="news-item">
+                        <div class="image-wrapper">
+                          <img src="./assets/images/landing.png" class="news-img" alt="News Image">
+                          <div class="date-overlay">October 1, 2023</div>
+                        </div>
+                        <div class="news-content">
+                          <h5 class="news-title">Second quota trailblazers for 2023 anouncement</h5>
+                          <p class="news-description">Time vampire gain traction. C-suite marginalised key performance
+                            indicators wiggle room innovation is hot right now can we jump on a zoom, and granularity.
+                            We need his overall to be busier and active we need to socialize the comms with the wider
+                            stakeholder community.</p>
+                        </div>
+                      </div>
+                      <div class="news-item">
+                        <div class="image-wrapper">
+                          <img src="./assets/images/news2.jpg" class="news-img" alt="News Image">
+                          <div class="date-overlay">October 1, 2023</div>
+                        </div>
+                        <div class="news-content">
+                          <h5 class="news-title">End of the quota, please remember to recognize your colleagues.</h5>
+                          <p class="news-description">Time vampire gain traction. C-suite marginalised key performance
+                            indicators wiggle room innovation is hot right now can we jump on a zoom, and granularity.
+                            We need his overall to be busier and active we need to socialize the comms with the wider
+                            stakeholder community.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>   
+                </div>
+            </div>
           </div>
         </div>
       </div>
