added recent nominations structure and styles

--- a/index.html
+++ b/index.html
@@ -19,25 +19,76 @@
   </nav>
   <div class="container">
     <div class="row">
-      <div class="col-md-4 box">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente ex,
-        velit esse at magni ipsa et illo quae. Eum laboriosam placeat,
-        reiciendis necessitatibus ea nobis iusto. Dolorum deserunt eaque
-        repellendus. Totam, obcaecati officia itaque laudantium nihil iusto?
-        Laboriosam dolores perspiciatis aliquid odit numquam unde architecto.
-        Nihil a illo doloribus amet eos, architecto laudantium esse natus?
-        Reiciendis sunt pariatur ipsa perferendis. Numquam aperiam, odio maiores
-        illo doloremque molestiae, debitis, illum sint modi enim autem fugit
-        facere. Amet optio asperiores in praesentium doloribus similique beatae,
-        officia fuga sed sunt, cum unde laboriosam! Nobis laudantium cumque,
-        earum, repudiandae dolorem, sapiente incidunt explicabo ad asperiores
-        cupiditate beatae reprehenderit assumenda. Sapiente delectus numquam
-        voluptas quo quod reiciendis totam, nihil modi sed laboriosam iste
-        pariatur voluptatum? Debitis, quae esse reprehenderit aspernatur beatae
-        excepturi consequatur cum, quaerat a voluptates magni aperiam ut dicta
-        illum asperiores eveniet quo aut officia explicabo vel voluptatibus!
-        Earum eveniet veritatis explicabo adipisci.
-      </div>
+        <div class="col-sm-4  margin-t box">
+            <div class="header-recent">
+                <h6>Recent Nominations</h6>
+                <div class="reloadcircle">
+                    <i class="bi bi-arrow-clockwise"></i>
+                </div>
+            </div>
+            <div class="row nomination">
+                <div class="col-sm-2 p-3">
+                    <div class="absa-badge2 ml-5">JS</div>
+                </div>
+                <div class="col-sm-10 text-align">
+                    <div class="row">
+                        <div class="col-sm-10 ">
+                            <h6 class="">John <b>Smith</b></h6>
+                        </div>
+                        <div class="col-sm-2 likes-1">
+                            <!-- <div class="likes-badge">100</div> -->
+                            <i class="fas fa-heart like-button"></i>
+                            <div class="fas likes-badge">100</div>
+                            <!-- <i class="far fa-heart"></i> -->
+                        </div>
+                    </div>
+                    <div class="l-h-0-5">
+                        <label class="mb-1 display:inline-block"><strong>Developer</strong></label><label class="red"> -
+                            Engineering</label>
+                    </div>
+                    <div class="">
+                        <p>Brave - We are afraid to challenge our thinking.</p>
+                    </div>
+                   
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <label class="duration pb-1 px-3"><b>10d ago</b></label>
+                </div>
+               </div>
+            <div class="col-sm-12 nomination-border"></div>
+            <div class="row nomination">
+                <div class="col-sm-2 p-3">
+                    <div class="absa-badge2 ml-5">JS</div>
+                </div>
+                <div class="col-sm-10 text-align">
+                    <div class="row">
+                        <div class="col-sm-10 ">
+                            <h6 class="">John <b>Smith</b></h6>
+                        </div>
+                        <div class="col-sm-2 likes-1">
+                            <div class="fas likes-badge">100</div>
+                            <!-- <i class="fas fa-heart"></i> -->
+                            <i class="far fa-heart like-button"></i>
+                        </div>
+                    </div>
+                    <div class="l-h-0-5">
+                        <label class="mb-1 display:inline-block"><strong>Developer</strong></label><label class="red"> -
+                            Engineering</label>
+                    </div>
+                    <div class="">
+                        <p>Brave - We are afraid to challenge our thinking.</p>
+                    </div>
+                </div>
+            </div>
+           <div class="row">
+            <div class="col-sm-12">
+                <label class="duration pb-1 px-3"><b>10d ago</b></label>
+            </div>
+           </div>
+            <div class="col-sm-12 nomination-border"></div>
+        </div>
       <div class="col-md-8">
         <div class="row">
 
