--- a/index.html
+++ b/index.html
@@ -19,25 +19,76 @@
   </nav>
   <div class="container">
     <div class="row">
-      <div class="col-md-4 box">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente ex,
-        velit esse at magni ipsa et illo quae. Eum laboriosam placeat,
-        reiciendis necessitatibus ea nobis iusto. Dolorum deserunt eaque
-        repellendus. Totam, obcaecati officia itaque laudantium nihil iusto?
-        Laboriosam dolores perspiciatis aliquid odit numquam unde architecto.
-        Nihil a illo doloribus amet eos, architecto laudantium esse natus?
-        Reiciendis sunt pariatur ipsa perferendis. Numquam aperiam, odio maiores
-        illo doloremque molestiae, debitis, illum sint modi enim autem fugit
-        facere. Amet optio asperiores in praesentium doloribus similique beatae,
-        officia fuga sed sunt, cum unde laboriosam! Nobis laudantium cumque,
-        earum, repudiandae dolorem, sapiente incidunt explicabo ad asperiores
-        cupiditate beatae reprehenderit assumenda. Sapiente delectus numquam
-        voluptas quo quod reiciendis totam, nihil modi sed laboriosam iste
-        pariatur voluptatum? Debitis, quae esse reprehenderit aspernatur beatae
-        excepturi consequatur cum, quaerat a voluptates magni aperiam ut dicta
-        illum asperiores eveniet quo aut officia explicabo vel voluptatibus!
-        Earum eveniet veritatis explicabo adipisci.
-      </div>
+        <div class="col-sm-4  margin-t box">
+            <div class="header-recent">
+                <h6>Recent Nominations</h6>
+                <div class="reloadcircle">
+                    <i class="bi bi-arrow-clockwise"></i>
+                </div>
+            </div>
+            <div class="row nomination">
+                <div class="col-sm-2 p-3">
+                    <div class="absa-badge2 ml-5">JS</div>
+                </div>
+                <div class="col-sm-10 text-align">
+                    <div class="row">
+                        <div class="col-sm-10 ">
+                            <h6 class="">John <b>Smith</b></h6>
+                        </div>
+                        <div class="col-sm-2 likes-1">
+                            <!-- <div class="likes-badge">100</div> -->
+                            <i class="fas fa-heart like-button"></i>
+                            <div class="fas likes-badge">100</div>
+                            <!-- <i class="far fa-heart"></i> -->
+                        </div>
+                    </div>
+                    <div class="l-h-0-5">
+                        <label class="mb-1 display:inline-block"><strong>Developer</strong></label><label class="red"> -
+                            Engineering</label>
+                    </div>
+                    <div class="">
+                        <p>Brave - We are afraid to challenge our thinking.</p>
+                    </div>
+                   
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <label class="duration pb-1 px-3"><b>10d ago</b></label>
+                </div>
+               </div>
+            <div class="col-sm-12 nomination-border"></div>
+            <div class="row nomination">
+                <div class="col-sm-2 p-3">
+                    <div class="absa-badge2 ml-5">JS</div>
+                </div>
+                <div class="col-sm-10 text-align">
+                    <div class="row">
+                        <div class="col-sm-10 ">
+                            <h6 class="">John <b>Smith</b></h6>
+                        </div>
+                        <div class="col-sm-2 likes-1">
+                            <div class="fas likes-badge">100</div>
+                            <!-- <i class="fas fa-heart"></i> -->
+                            <i class="far fa-heart like-button"></i>
+                        </div>
+                    </div>
+                    <div class="l-h-0-5">
+                        <label class="mb-1 display:inline-block"><strong>Developer</strong></label><label class="red"> -
+                            Engineering</label>
+                    </div>
+                    <div class="">
+                        <p>Brave - We are afraid to challenge our thinking.</p>
+                    </div>
+                </div>
+            </div>
+           <div class="row">
+            <div class="col-sm-12">
+                <label class="duration pb-1 px-3"><b>10d ago</b></label>
+            </div>
+           </div>
+            <div class="col-sm-12 nomination-border"></div>
+        </div>
       <div class="col-md-8">
         <div class="row">
 
@@ -62,12 +113,10 @@
             <div class="box bx2">
               <p class="py-3 head2">Current quota statistics</p>
                 <div class="stats"> 
-                  <hr>
                   <div class="stats1">
                      <div class="balDiv"> <span class="balance">850</span> </div>
                      <div class="availText">Available kudos points balance</div>
                   </div>
-                  <hr>
                   <div class="stats2">
                      <div class="row">
                       <div class="col-sm-6 colTwo"><strong>50</strong></div>
@@ -75,29 +124,25 @@
                      </div>
                     <div class="row rowTwo">Nomination made points </div>
                   </div>
-                  <hr >
                   <div class="stats3">
                     <div class="row">
                       <div class="col-sm-6 colTwo3"><strong>1200</strong></div>
                       <div class="col-sm-6 colThree3"> <span class="absa-badge">4</span></div>
                      </div>
                     <div class="row rowTwo3">Nomination recieved points </div>
-                  </div>
-                  <hr style="margin-top: 1.5rem;">
+                    </div>
                   <div class="stats4">
                     <div class="row">
                       <div class="col-sm-10 colFour1">Group recognition nominations</div>
                       <div class="col-sm-2"><span class="absa-badge2">10</span></div>
                      </div>
                   </div>
-                  <hr style="margin-top: 0.7rem;">
                   <div class="stats4">
                     <div class="row">
                       <div class="col-sm-10 colFour1">Certifications</div>
                       <div class="col-sm-2"><span class="absa-badge">7</span></div>
                      </div>
                   </div>
-                  <hr style="margin-top: 0.7rem;">
             </div>
           </div>
         </div>
@@ -126,4 +171,3 @@
 </body>
 
 </html>
-
