Mae some few changes

--- a/index.html
+++ b/index.html
@@ -100,9 +100,12 @@
                         <b>Give recognition to your colleagues. Give Kudos</b>
                     </p>
                     <hr class="hr">
-                    <a class="absa-btn btn-black" href="#">Peer top peer recognition <i class="bi bi-arrow-right" style="margin-left: 6px;"></i></a>
+                    <a class="absa-btn btn-black" href="#">
+                      <span>Peer top peer recognition </span>
+                      <i class="bi bi-arrow-right" style="margin-left: 6px;"></i>
+                    </a>
                     <hr class="hr">
-                    <a class="absa-btn btn-orange" href="#">Group recognition <i class="bi bi-arrow-right" style="margin-left: 6px;"></i></a>
+                    <a class="absa-btn btn-orange" href="#">Group recognition <i class="bi bi-arrow-right" style="justify-content: end; "></i></a>
                     <hr class="hr">
                     <a class="absa-btn btn-white" href="#">Cerrtifications recognition <i class="bi bi-arrow-right" style="margin-left: 6px;"></i></a>
                 </div>        
@@ -143,7 +146,7 @@
                       <div class="col-sm-2"><span class="absa-badge">7</span></div>
                      </div>
                   </div>
-            </div>
+              </div>
           </div>
         </div>
         <div class="row p-2">
